@@ -1,3 +1,5 @@
+
+- Added errors for invalid configuration options.
 -------------------------------------------------------------------------------
 Changes in version 0.98
 
